tests/parser/valid/function_call.src
fn add(int a, int b) -> int {
    return a + b;
}

fn main() {
    int x = add(1, 2);
}
