tests/parser/invalid/unclosed_block.src
fn main() {
    int x = 1;
